# empatico

./: README.md  README.rst  pyproject.toml  requirements.txt
empatico/: __init__.py  zshot.py
