[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "empatico"
authors = [
    {name = "Caleb Hattingh", email = "caleb.hattingh@gmail.com"}
]
readme = "README.rst"
home-page = "https://github.com/cjrh/empatico"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
    ]
dependencies = [
    "wheel", 
    "transformers[torch]", 
    "fastapi"
]
requires-python = ">=3.9"
licence = {file = "LICENCE"}
keywords = ["nlp", "natural language", "sentiment analysis", "emotion detection"]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
doc = ["sphinx"]
