[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "empatico"
authors = [
    {name = "Caleb Hattingh", email = "caleb.hattingh@gmail.com"}
]
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
dependencies = [
    "transformers[torch]",
    "fastapi",
    "uvicorn[standard]",
]
requires-python = ">=3.13"
license = {file = "LICENSE"}
keywords = ["nlp", "natural language", "sentiment analysis", "emotion detection"]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/cjrh/empatico"
Repository = "https://github.com/cjrh/empatico"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
doc = ["sphinx"]
